# cheddar-ae

./: Dockerfile  README.md
include/extension/: ExampleOps.h
parameters/: bootparam_48.json  helrparam_30.json  helrparam_35.json  helrparam_40.json  helrparam_48.json  resnetparam_30.json  resnetparam_35.json  resnetparam_40.json  resnetparam_48.json  rnnparam_30.json  rnnparam_35.json  rnnparam_40.json  rnnparam_48.json  sortingparam_30.json  sortingparam_35.json  sortingparam_48.json
resnet20_fused/: bn1.bias  bn1.weight  ckpt.pth  conv1.weight  conv1_reparam.bias  conv1_reparam.weight  layer1.0.conv1_reparam.bias  layer1.0.conv1_reparam.weight  layer1.0.conv2_reparam.bias  layer1.0.conv2_reparam.weight  layer1.1.conv1_reparam.bias  layer1.1.conv1_reparam.weight  layer1.1.conv2_reparam.bias  layer1.1.conv2_reparam.weight  layer1.2.conv1_reparam.bias  layer1.2.conv1_reparam.weight  layer1.2.conv2_reparam.bias  layer1.2.conv2_reparam.weight  layer2.0.conv1_reparam.bias  layer2.0.conv1_reparam.weight  layer2.0.conv2_reparam.bias  layer2.0.conv2_reparam.weight  layer2.0.shortcut.0.weight  layer2.0.shortcut.1.bias  layer2.0.shortcut.1.weight  layer2.0.shortcut_reparam.bias  layer2.0.shortcut_reparam.weight  layer2.1.conv1_reparam.bias  layer2.1.conv1_reparam.weight  layer2.1.conv2_reparam.bias  layer2.1.conv2_reparam.weight  layer2.2.conv1_reparam.bias  layer2.2.conv1_reparam.weight  layer2.2.conv2_reparam.bias  layer2.2.conv2_reparam.weight  layer3.0.conv1_reparam.bias  layer3.0.conv1_reparam.weight  layer3.0.conv2_reparam.bias  layer3.0.conv2_reparam.weight  layer3.0.shortcut.0.weight  (+14 more)
scripts/: Experiment1.py  Experiment2.py  Experiment3.py  Experiment4-1.py  Experiment4.py
unittest/: BasicTest.cpp  Bootstrapping.cpp  CMakeLists.txt  DatasetUtils.h  HELR.cpp  PrepareInput.h  ResNet.cpp  ResNet_acc.cpp  Sorting.cpp  Sorting_prec.cpp  Testbed.h
